apply plugin: "com.android.library"
apply plugin: "kotlin-android"
apply plugin: "kotlin-android-extensions"

android {
  compileSdkVersion project.compileSdkVersion
  buildToolsVersion project.buildToolsVersion

  defaultConfig {
    minSdkVersion project.minSdkVersion
    targetSdkVersion project.targetSdkVersion
    versionCode 1
    versionName "1.0"
    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
  }

  compileOptions {
    sourceCompatibility JavaVersion.VERSION_1_8
    targetCompatibility JavaVersion.VERSION_1_8
  }

  kotlinOptions {
    jvmTarget = "1.8"
  }
}

dependencies {

  implementation project(':base')
  implementation project(':fs')
  implementation deps.androidAnnotations
  implementation deps.androidCoreKtx
  implementation deps.kotlinStdlibJdk7

  androidTestImplementation project(':testing-fs')

  androidTestImplementation deps.mockitoAndroid
  androidTestImplementation deps.androidTestRunner

  testImplementation deps.junit
  testImplementation deps.mockitoCore

}
